# first_app_polls

./: pyproject.toml
first_app_polls/mysite/mysite/: settings.py  urls.py
first_app_polls/mysite/polls/migrations/: 0001_initial.py
