[tool.poetry]
name = "first-app-polls"
version = "0.1.0"
description = ""
authors = ["matheuslpolidoro <mattpolidoro4@gmail.com>"]
readme = "README.md"
packages = [{include = "first_app_polls"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
